Базовая стилизация хедера

--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,28 @@ body {
 a {
   text-decoration: none;
 }
+
+
+.navigation {
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  background-color: #000000;
+}
+
+.navigation__menu,
+.navigation__user {
+  list-style: none;
+}
+
+.menu__link,
+.user__link {
+  color: #ffffff;
+}
+
+.menu__link:hover,
+.menu__link:focus,
+.user__link:hover,
+.user__link:focus {
+  background-color: #242424;
+}
