--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,21 @@ a {
   text-decoration: none;
 }
 
+.button {
+  font: inherit;
+  text-align: center;
+  color: #ffffff;
+  vertical-align: middle;
+  text-transform: uppercase;
+  background-color: #000000;
+  border: none;
+}
+
+.button:hover,
+.button:focus,
+.button:active {
+  background-color: #663d15;
+}
 
 .navigation {
   font-size: 16px;
@@ -31,14 +46,74 @@ a {
   list-style: none;
 }
 
-.menu__link,
-.user__link {
+.menu__link {
   color: #ffffff;
 }
 
 .menu__link:hover,
-.menu__link:focus,
+.menu__link:focus {
+  background-color: #242424;
+}
+
+.user__link {
+  color: #ffffff;
+}
+
 .user__link:hover,
 .user__link:focus {
   background-color: #242424;
+}
+
+.features__list {
+  list-style: none;
+}
+
+.feature__item {
+  text-align: center;
+}
+
+.feature__tagline {
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.index-columns {
+  color: #000000;
+  background-color: #f8f5f2;
+  background-image: url("img/pattern-light.jpg");
+  background-position: 0 0;
+  background-repeat: repeat;
+}
+
+.news__title {
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.news__list {
+  list-style: none;
+}
+
+.news__time {
+  text-transform: none;
+}
+
+.gallery__title {
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.gallery__content {
+  background-color: #cccccc;
+  border: 7px solid #ffffff;
+}
+
+.appointment__input {
+  font: inherit;
+  background-color: transparent;
+  border: 2px solid #000000;
+}
+
+.appointment__input:focus {
+  border-color: #663d15;
 }
