--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ a {
   text-decoration: none;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .button {
   font: inherit;
   text-align: center;
@@ -127,7 +132,7 @@ a {
 .page__footer {
   color: #ffffff;
   background-color: #212121;
-  background-image: url("img/pattern-dark.jpg");
+  background-image: url("../img/pattern-dark.jpg");
   background-position: 0 0;
   background-repeat: repeat;
 }
@@ -167,7 +172,7 @@ a {
 .modal {
   color: #000000;
   background-color: #f8f3f0;
-  background-image: url("img/pattern-light.jpg");
+  background-image: url("../img/pattern-light.jpg");
   background-position: 0 0;
   background-repeat: repeat;
 }
@@ -317,4 +322,36 @@ a {
 .pagination__link--current:active {
   color: #000000;
   background-color: #ffffff;
+}
+
+.product-photos__list {
+  list-style: none;
+}
+
+.product-photos__item {
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.product-photo__full {
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.product-info__article {
+  text-align: right;
+  color: #aeaeae;
+}
+
+.product-info__price {
+  line-height: 20px;
+  text-align: center;
+  background-color: #e5e5e5;
+}
+
+.product-info__description {
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.product-info__list {
+  list-style: none;
 }
