--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   margin: 0;
   padding: 0;
@@ -7,21 +8,17 @@ body {
   font-weight: 700;
   color: #ffffff;
   text-transform: uppercase;
-
   background-color: #000000;
   background-image: url("../img/bg.jpg");
   background-position: top center;
-  background-repeat: no-repeat;
-}
+  background-repeat: no-repeat; }
 
 a {
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 img {
   max-width: 100%;
-  height: auto;
-}
+  height: auto; }
 
 .button {
   font: inherit;
@@ -30,328 +27,261 @@ img {
   vertical-align: middle;
   text-transform: uppercase;
   background-color: #000000;
-  border: none;
-}
+  border: none; }
 
 .button:hover,
 .button:focus,
 .button:active {
-  background-color: #663d15;
-}
+  background-color: #663d15; }
 
 .navigation {
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
-  background-color: #000000;
-}
+  background-color: #000000; }
 
 .navigation__menu,
 .navigation__user {
-  list-style: none;
-}
+  list-style: none; }
 
 .menu__link {
-  color: #ffffff;
-}
+  color: #ffffff; }
 
 .menu__link:hover,
 .menu__link:focus {
-  background-color: #242424;
-}
+  background-color: #242424; }
 
 .user__link {
-  color: #ffffff;
-}
+  color: #ffffff; }
 
 .user__link:hover,
 .user__link:focus {
-  background-color: #242424;
-}
+  background-color: #242424; }
 
 .page__title {
   font-size: 30px;
-  line-height: 42px;
-}
+  line-height: 42px; }
 
-
-.features__list {
-  list-style: none;
-}
-
-.feature__item {
-  text-align: center;
-}
-
-.feature__tagline {
-  font-size: 30px;
-  line-height: 42px;
-}
-
-.index-columns {
+.page__columns {
   color: #000000;
   background-color: #f8f5f2;
   background-image: url("img/pattern-light.jpg");
   background-position: 0 0;
-  background-repeat: repeat;
-}
-
-.news__title {
-  font-size: 30px;
-  line-height: 42px;
-}
-
-.news__list {
-  list-style: none;
-}
-
-.news__time {
-  text-transform: none;
-}
-
-.gallery__title {
-  font-size: 30px;
-  line-height: 42px;
-}
-
-.gallery__content {
-  background-color: #cccccc;
-  border: 7px solid #ffffff;
-}
-
-.appointment__input {
-  font: inherit;
-  background-color: transparent;
-  border: 2px solid #000000;
-}
-
-.appointment__input:focus {
-  border-color: #663d15;
-}
-
-.page__footer {
-  color: #ffffff;
-  background-color: #212121;
-  background-image: url("../img/pattern-dark.jpg");
-  background-position: 0 0;
-  background-repeat: repeat;
-}
-
-.footer-contacts__link {
-  color: #ffffff;
-  text-decoration: underline;
-}
-
-.footer-contacts__link:hover,
-.footer-contacts__link:focus {
-  text-decoration: none;
-}
-
-.social {
-  text-align: center;
-}
-
-.social__list {
-  list-style: none;
-}
-
-.social__link {
-  color: #ffffff;
-}
-
-.copyright {
-  text-align: center;
-}
-
-.copyright__button:hover,
-.copyright__button:focus {
-  color: #000000;
-  background-color: #ffffff;
-}
-
-.modal {
-  color: #000000;
-  background-color: #f8f3f0;
-  background-image: url("../img/pattern-light.jpg");
-  background-position: 0 0;
-  background-repeat: repeat;
-}
-
-.modal-login__title {
-  font-size: 30px;
-  line-height: 42px;
-}
-
-.login-form__input {
-  font: inherit;
-  color: #000000;
-  text-transform: uppercase;
-  background-color: #f9f6f3;
-  border: 2px solid #000000;
-}
-
-.login-form__input:focus {
-  border-color: #663d15;
-}
-
-.login-form__checkbox:hover,
-.login-form__checkbox:focus {
-  color: #663d15;
-}
-
-.login-form__restore {
-  color: #000000;
-  text-decoration: underline;
-}
-
-.login-form__restore:hover,
-.login-form__restore:focus {
-  text-decoration: none;
-}
-
+  background-repeat: repeat; }
 
 .page--inner {
   color: #000000;
   background-color: #f9f6f3;
   background-image: url("../img/pattern-light.jpg");
   background-position: 0 0;
-  background-repeat: repeat;
-}
+  background-repeat: repeat; }
+
+.features__list {
+  list-style: none; }
+
+.feature__item {
+  text-align: center; }
+
+.feature__tagline {
+  font-size: 30px;
+  line-height: 42px; }
+
+.news__title {
+  font-size: 30px;
+  line-height: 42px; }
+
+.news__list {
+  list-style: none; }
+
+.news__time {
+  text-transform: none; }
+
+.gallery__title {
+  font-size: 30px;
+  line-height: 42px; }
+
+.gallery__content {
+  background-color: #cccccc;
+  border: 7px solid #ffffff; }
+
+.appointment__input {
+  font: inherit;
+  background-color: transparent;
+  border: 2px solid #000000; }
+
+.appointment__input:focus {
+  border-color: #663d15; }
+
+.footer {
+  color: #ffffff;
+  background-color: #212121;
+  background-image: url("../img/pattern-dark.jpg");
+  background-position: 0 0;
+  background-repeat: repeat; }
+
+.footer-contacts__link {
+  color: #ffffff;
+  text-decoration: underline; }
+
+.footer-contacts__link:hover,
+.footer-contacts__link:focus {
+  text-decoration: none; }
+
+.social {
+  text-align: center; }
+
+.social__list {
+  list-style: none; }
+
+.social__link {
+  color: #ffffff; }
+
+.copyright {
+  text-align: center; }
+
+.copyright__button:hover,
+.copyright__button:focus {
+  color: #000000;
+  background-color: #ffffff; }
+
+.modal {
+  color: #000000;
+  background-color: #f8f3f0;
+  background-image: url("../img/pattern-light.jpg");
+  background-position: 0 0;
+  background-repeat: repeat; }
+
+.modal-login__title {
+  font-size: 30px;
+  line-height: 42px; }
+
+.login-form__input {
+  font: inherit;
+  color: #000000;
+  text-transform: uppercase;
+  background-color: #f9f6f3;
+  border: 2px solid #000000; }
+
+.login-form__input:focus {
+  border-color: #663d15; }
+
+.login-form__checkbox:hover,
+.login-form__checkbox:focus {
+  color: #663d15; }
+
+.login-form__restore {
+  color: #000000;
+  text-decoration: underline; }
+
+.login-form__restore:hover,
+.login-form__restore:focus {
+  text-decoration: none; }
 
 .breadcrumbs {
-  list-style: none;
-}
+  list-style: none; }
 
 .breadcrumbs__link {
-  color: #000000;
-}
+  color: #000000; }
 
 .breadcrumbs__link:hover,
 .breadcrumbs__link:focus {
-  text-decoration: underline;
-}
+  text-decoration: underline; }
 
 .breadcrumbs__item--current {
-  color: #aba9a7;
-}
+  color: #aba9a7; }
 
 .filter__group {
-  border: none;
-}
+  border: none; }
 
 .filter__title {
   font-size: 24px;
-  line-height: 30px;
-}
+  line-height: 30px; }
 
 .filter__list {
   list-style: none;
-  line-height: 18px;
-}
+  line-height: 18px; }
 
 .filter__input:hover + .filter__label,
 .filter__input:focus + .filter__label {
-  color: #663d15;
-}
+  color: #663d15; }
 
 .filter__input:disabled + .filter__label {
   color: #000000;
-  opacity: 0.5;
-}
+  opacity: 0.5; }
 
 .catalog__list {
-  list-style: none;
-}
+  list-style: none; }
 
 .сard {
   background-color: #f8f8f8;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
 
 .сard:hover {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); }
 
 .card__text-link {
-  color: #000000;
-}
+  color: #000000; }
 
 .card__title {
   font-size: 14px;
-  line-height: 18px;
-}
+  line-height: 18px; }
 
 .card__category {
-  text-transform: none;
-}
+  text-transform: none; }
 
 .card__price {
   font-size: 14px;
   line-height: 20px;
   text-align: center;
-  background-color: #e5e5e5;
-}
+  background-color: #e5e5e5; }
 
 .card__button {
   line-height: 20px;
-  color: #ffffff;
-}
+  color: #ffffff; }
 
-.pagination__list {
-  list-style: none;
-}
+.pagination {
+  list-style: none; }
 
 .pagination__link {
   color: #ffffff;
-  background-color: #000000;
-}
+  background-color: #000000; }
 
 .pagination__link:hover,
 .pagination__link:focus,
 .pagination__link:active {
-  background-color: #663d15;
-}
+  background-color: #663d15; }
 
 .pagination__link--current {
   color: #000000;
-  background-color: #ffffff;
-}
+  background-color: #ffffff; }
 
 .pagination__link--current:hover,
 .pagination__link--current:focus,
 .pagination__link--current:active {
   color: #000000;
-  background-color: #ffffff;
-}
+  background-color: #ffffff; }
 
 .product-photos__list {
-  list-style: none;
-}
+  list-style: none; }
 
 .product-photos__item {
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
-}
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1); }
 
 .product-photo__full {
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
-}
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1); }
 
 .product-info__article {
   text-align: right;
-  color: #aeaeae;
-}
+  color: #aeaeae; }
 
 .product-info__price {
   line-height: 20px;
   text-align: center;
-  background-color: #e5e5e5;
-}
+  background-color: #e5e5e5; }
 
 .product-info__description {
   font-size: 24px;
-  line-height: 30px;
-}
+  line-height: 30px; }
 
 .product-info__list {
-  list-style: none;
-}
+  list-style: none; }
