Сделана сетка хедера главной страницы

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,30 @@ img {
   max-width: 100%;
   height: auto; }
 
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden; }
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px; }
+
+.container--nav {
+  display: flex;
+  justify-content: space-between; }
+
 .button {
   font: inherit;
   text-align: center;
@@ -35,28 +59,86 @@ img {
   background-color: #663d15; }
 
 .navigation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: transparent;
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
   background-color: #000000; }
 
-.navigation__menu,
-.navigation__user {
+.navigation__wrapper {
+  width: 100%;
+  margin-bottom: 60px;
+  background-color: #000000; }
+
+.navigation--inner {
+  align-items: flex-start;
+  flex-direction: row; }
+
+.navigation__logo {
+  order: 2;
+  width: 368px;
+  height: 153px; }
+
+.navigation__logo--inner {
+  order: 0;
+  width: 111px;
+  height: 24px;
+  padding: 23px 20px; }
+
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  width: 620px;
+  margin: 0;
+  padding: 0;
   list-style: none; }
 
 .menu__link {
+  display: inline-block;
+  padding: 25px 20px;
+  vertical-align: middle;
   color: #ffffff; }
+
+.user {
+  display: flex;
+  max-width: 140px;
+  margin: 0;
+  padding: 0;
+  list-style: none; }
 
 .menu__link:hover,
 .menu__link:focus {
   background-color: #242424; }
 
 .user__link {
+  position: relative;
+  display: inline-block;
+  padding: 25px 20px;
+  padding-left: 50px;
+  vertical-align: middle;
   color: #ffffff; }
 
 .user__link:hover,
 .user__link:focus {
   background-color: #242424; }
+
+.user__link::before {
+  content: "";
+  position: absolute;
+  top: 27px;
+  left: 24px;
+  width: 16px;
+  height: 18px;
+  background-image: url("../img/login.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  opacity: 0.3; }
+
+.page__header {
+  margin-bottom: 75px; }
 
 .page__title {
   font-size: 30px;
