--- a/sass/blocks/page.scss
+++ b/sass/blocks/page.scss
@@ -2,6 +2,11 @@
   margin-bottom: 75px;
 }
 
+.page__header--inner {
+  margin-bottom: 50px;
+  background-color: #000000;
+}
+
 .page__title {
   font-size: 30px;
   line-height: 42px;
