--- a/sass/blocks/page.scss
+++ b/sass/blocks/page.scss
@@ -13,6 +13,7 @@
 }
 
 .page__columns {
+  padding: 50px 80px;
   color: #000000;
   background-color: #f8f5f2;
   background-image: url("img/pattern-light.jpg");
