--- a/sass/blocks/news.scss
+++ b/sass/blocks/news.scss
@@ -1,10 +1,30 @@
+.news {
+  width: 380px;
+
+  // background: rgba(0, 128, 0, 0.2);
+  // box-shadow: 0 0 0 3px green;
+}
+
 .news__title {
+  margin: 0;
+  margin-bottom: 25px;
   font-size: 30px;
   line-height: 42px;
 }
 
 .news__list {
+  margin: 0;
+  margin-bottom: 25px;
+  padding: 0;
   list-style: none;
+}
+
+.news__item {
+  margin-bottom: 25px;
+}
+
+.news__text {
+  margin: 0;
 }
 
 .news__time {
