Доработаны общие стили и стили кнопок

--- a/sass/blocks/button.scss
+++ b/sass/blocks/button.scss
@@ -1,4 +1,9 @@
 .button {
+
+  display: inline-block;
+  margin-right: 16px;
+  padding: 10px 30px;
+
   font: inherit;
   text-align: center;
   color: #ffffff;
@@ -12,4 +17,12 @@
 .button:focus,
 .button:active {
   background-color: #663d15;
+  cursor: pointer;
+}
+
+.button.disabled,
+.button:disabled {
+  cursor: default;
+  opacity: 0.5;
+  background-color: #000000;
 }
