--- a/sass/blocks/common.scss
+++ b/sass/blocks/common.scss
@@ -47,3 +47,7 @@ input[type="radio"].visually-hidden {
   display: flex;
   justify-content: space-between;
 }
+
+.container--footer {
+  display: flex;
+}
