--- a/sass/blocks/page.scss
+++ b/sass/blocks/page.scss
@@ -13,12 +13,15 @@
 }
 
 .page__columns {
+  display: flex;
+  justify-content: space-between;
   padding: 50px 80px;
+  margin-bottom: 35px;
   color: #000000;
   background-color: #f8f5f2;
-  background-image: url("img/pattern-light.jpg");
-  background-position: 0 0;
-  background-repeat: repeat;
+  background-image: url("../img/line.png"), url("../img/pattern-light.jpg");
+  background-position: center, 0 0;
+  background-repeat: no-repeat, repeat;
 }
 
 .page--inner {
