--- a/sass/blocks/appointment.scss
+++ b/sass/blocks/appointment.scss
@@ -1,4 +1,35 @@
+.appointment {
+  width: 300px;
+}
+
+
+.appointment__info {
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.appointment__form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.appointment__item {
+  width: 140px;
+  margin: 0;
+  margin-bottom: 10px;
+  // background: rgba(234, 255, 45, 0.2);
+  // box-shadow: inset 0 0 0 2px rgb(234, 255, 45);
+}
+
 .appointment__input {
+  box-sizing: border-box;
+  width: 140px;
+  padding-top: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 7px;
+
   font: inherit;
   background-color: transparent;
   border: 2px solid #000000;
@@ -6,4 +37,17 @@
 
 .appointment__input:focus {
   border-color: #663d15;
+}
+
+.appointment__label {
+  display: block;
+  margin-bottom: 9px;
+  margin-left: 15px;
+}
+
+.appointment__button {
+  display: block;
+  width: 100%;
+  margin-top: 10px;
+  margin-right: 0;
 }
