Доработка разметки внутренних страниц

--- a/sass/blocks/page.scss
+++ b/sass/blocks/page.scss
@@ -31,3 +31,8 @@
   background-position: 0 0;
   background-repeat: repeat;
 }
+
+.page__product-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
