--- a/sass/blocks/breadcrumbs.scss
+++ b/sass/blocks/breadcrumbs.scss
@@ -1,6 +1,36 @@
 .breadcrumbs {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 50px;
   list-style: none;
 }
+
+.breadcrumbs__item {
+position: relative;
+margin-right: 42px;
+
+&:last-child {
+  margin-right: 0;
+}
+
+&::after {
+  content: "";
+  position: absolute;
+  top: 7px;
+  right: -25px;
+  width: 8px;
+  height: 8px;
+  background-color: #000000;
+  transform: rotate(45deg);
+}
+}
+
+.breadcrumbs__item--current::after {
+    display: none;
+  }
 
 .breadcrumbs__link {
   color: #000000;
