--- a/sass/blocks/product-photos.scss
+++ b/sass/blocks/product-photos.scss
@@ -1,11 +1,31 @@
+.product-photos {
+  width: 460px;
+}
+
 .product-photos__list {
+   display: flex;
+   padding: 0;
+   margin: 0;
+
   list-style: none;
 }
 
 .product-photos__item {
+  width: 140px;
+  height: 149px;
+  margin-right: 20px;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 
 .product-photo__full {
+  width: 460px;
+  height: 498px;
+  margin: 0;
+  margin-bottom: 20px;
+  
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
