--- a/sass/blocks/product-info.scss
+++ b/sass/blocks/product-info.scss
@@ -1,19 +1,89 @@
+.product-info {
+  width: 390px;
+  padding-top: 23px;
+}
+
+.product-info__panel {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 10px;
+  margin-bottom: 29px;
+}
+
+.product-info__availability {
+  width: 200px;
+  margin: 0;
+}
+
 .product-info__article {
+  margin: 0;
+  width: 200px;
   text-align: right;
   color: #aeaeae;
 }
 
 .product-info__price {
+  width: 112px;
+  padding-top: 13px;
+  padding-left: 36px;
+  padding-right: 36px;
+  padding-bottom: 11px;
   line-height: 20px;
   text-align: center;
   background-color: #e5e5e5;
+  box-sizing: border-box;
 }
 
 .product-info__description {
+  margin: 0;
+  margin-bottom: 27px;
+
   font-size: 24px;
   line-height: 30px;
 }
 
 .product-info__list {
+  margin: 0;
+  padding: 0;
+
   list-style: none;
+}
+
+.product-info__item {
+  position: relative;
+  padding-left: 23px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 7px;
+    left: 2px;
+    width: 8px;
+    height: 8px;
+    background-color: #000000;
+    transform: rotate(45deg);
+  }
+}
+
+.product-info__text {
+  margin: 0;
+}
+
+.product-info__order {
+  margin: 0;
+}
+
+.product-info__order {
+  display: flex;
+  margin-bottom: 63px;
+}
+
+.product-info__button {
+padding-left: 17px;
+padding-right: 17px;
+
+}
+
+.product-info__text {
+  margin-bottom: 35px;
 }
