--- a/sass/blocks/pagination.scss
+++ b/sass/blocks/pagination.scss
@@ -1,11 +1,33 @@
 .pagination {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
 
+.pagination__item {
+  margin-right: 5px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
 .pagination__link {
+  display: block;
+  padding: 10px 19px;
   color: #ffffff;
   background-color: #000000;
 }
+
+.pagination__link--current {
+  display: block;
+  padding: 10px 19px;
+  color: #000000;
+  background-color: #ffffff;
+}
+
 
 .pagination__link:hover,
 .pagination__link:focus,
@@ -13,10 +35,6 @@
   background-color: #663d15;
 }
 
-.pagination__link--current {
-  color: #000000;
-  background-color: #ffffff;
-}
 
 .pagination__link--current:hover,
 .pagination__link--current:focus,
