Сетка секции каталога

--- a/sass/blocks/card.scss
+++ b/sass/blocks/card.scss
@@ -8,19 +8,36 @@
 }
 
 .card__text-link {
+    display: flex;
+    flex-direction: column;
   color: #000000;
 }
 
 .card__title {
+    order: 1;
+    margin-top: 17px;
+    margin-bottom: 12px;
+    margin-left: 16px;
+    margin-right: 15px;
   font-size: 14px;
   line-height: 18px;
 }
 
 .card__category {
+   display: block;
   text-transform: none;
 }
 
+.card__order {
+  display: flex;
+  margin: 15px;
+  margin-top: 0;
+}
+
 .card__price {
+    width: 112px;
+    padding: 13px 25px 11px;
+
   font-size: 14px;
   line-height: 20px;
   text-align: center;
@@ -28,6 +45,15 @@
 }
 
 .card__button {
+  width: 50px;
+  padding: 13px 18px 11px;
+  margin-right: 0;
   line-height: 20px;
   color: #ffffff;
+}
+
+.card__image {
+    width: 220px;
+    height: 165px;
+    margin: 0;
 }
