--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,9 @@ input[type="radio"].visually-hidden {
   background-position: 0 0;
   background-repeat: repeat; }
 
+.footer--inner {
+  margin-top: 45px; }
+
 .footer__contacts {
   width: 320px;
   margin: 0;
@@ -477,14 +480,25 @@ input[type="radio"].visually-hidden {
 .breadcrumbs__item--current {
   color: #aba9a7; }
 
+.filter {
+  width: 180px; }
+
 .filter__group {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 30px;
   border: none; }
+  .filter__group:first-child {
+    margin-bottom: 35px; }
 
 .filter__title {
+  margin-bottom: 26px;
   font-size: 24px;
   line-height: 30px; }
 
 .filter__list {
+  padding: 0;
+  margin: 0;
   list-style: none;
   line-height: 18px; }
 
@@ -496,8 +510,82 @@ input[type="radio"].visually-hidden {
   color: #000000;
   opacity: 0.5; }
 
+.filter__option {
+  margin-bottom: 19px;
+  padding-left: 45px; }
+
+.filter__label {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none; }
+
+.filter__input--checkbox + label::before {
+  content: "";
+  position: absolute;
+  left: -42px;
+  top: 0;
+  width: 16px;
+  height: 16px;
+  border: 2px solid #000000; }
+
+.filter__input--checkbox:checked + label::after {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: -38px;
+  width: 12px;
+  height: 12px;
+  background-image: url("../img/cross.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0; }
+
+.filter__input--radio + label::before {
+  content: "";
+  position: absolute;
+  left: -42px;
+  top: -1px;
+  width: 16px;
+  height: 16px;
+  border: 2px solid #000000;
+  border-radius: 50%; }
+
+.filter__input--radio:checked + label::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: -36px;
+  width: 8px;
+  height: 8px;
+  background-color: #000000;
+  border-radius: 50%; }
+
+.catalog-wrapper {
+  display: flex;
+  justify-content: space-between; }
+
+.catalog {
+  width: 700px; }
+
 .catalog__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 25px;
   list-style: none; }
+
+.catalog__item {
+  width: 220px;
+  margin-bottom: 20px;
+  margin-right: 20px; }
+
+.catalog__item:nth-child(3n) {
+  margin-right: 0; }
 
 .сard {
   background-color: #f8f8f8;
@@ -507,40 +595,76 @@ input[type="radio"].visually-hidden {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); }
 
 .card__text-link {
+  display: flex;
+  flex-direction: column;
   color: #000000; }
 
 .card__title {
+  order: 1;
+  margin-top: 17px;
+  margin-bottom: 12px;
+  margin-left: 16px;
+  margin-right: 15px;
   font-size: 14px;
   line-height: 18px; }
 
 .card__category {
+  display: block;
   text-transform: none; }
 
+.card__order {
+  display: flex;
+  margin: 15px;
+  margin-top: 0; }
+
 .card__price {
+  width: 112px;
+  padding: 13px 25px 11px;
   font-size: 14px;
   line-height: 20px;
   text-align: center;
   background-color: #e5e5e5; }
 
 .card__button {
+  width: 50px;
+  padding: 13px 18px 11px;
+  margin-right: 0;
   line-height: 20px;
   color: #ffffff; }
 
+.card__image {
+  width: 220px;
+  height: 165px;
+  margin: 0; }
+
 .pagination {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
   list-style: none; }
 
+.pagination__item {
+  margin-right: 5px; }
+  .pagination__item:last-child {
+    margin-right: 0; }
+
 .pagination__link {
+  display: block;
+  padding: 10px 19px;
   color: #ffffff;
   background-color: #000000; }
+
+.pagination__link--current {
+  display: block;
+  padding: 10px 19px;
+  color: #000000;
+  background-color: #ffffff; }
 
 .pagination__link:hover,
 .pagination__link:focus,
 .pagination__link:active {
   background-color: #663d15; }
-
-.pagination__link--current {
-  color: #000000;
-  background-color: #ffffff; }
 
 .pagination__link--current:hover,
 .pagination__link--current:focus,
