--- a/sass/blocks/catalog.scss
+++ b/sass/blocks/catalog.scss
@@ -1,3 +1,29 @@
+.catalog-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.catalog {
+  width: 700px;
+}
+
 .catalog__list {
+    display: flex;
+    flex-wrap: wrap;
+      justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 25px;
   list-style: none;
+}
+
+.catalog__item {
+  width: 220px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+
+}
+
+.catalog__item:nth-child(3n) {
+  margin-right: 0;
 }
