--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,7 +10,7 @@
 @import "blocks/footer";
 @import "blocks/modal";
 @import "blocks/breadcrumbs";
-@import "blocks/filters";
+@import "blocks/filter";
 @import "blocks/catalog";
 @import "blocks/card";
 @import "blocks/pagination";
