--- a/css/style.css
+++ b/css/style.css
@@ -768,3 +768,101 @@ input[type="radio"].visually-hidden {
 
 .product-info__text {
   margin-bottom: 35px; }
+
+.price {
+  margin-bottom: 75px; }
+
+.price__tagline {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 24px;
+  line-height: 30px; }
+
+.price__tagline--about {
+  width: 100%; }
+
+.price__title {
+  display: flex;
+  align-items: center;
+  margin-top: 55px;
+  margin-bottom: 65px;
+  font-size: 48px;
+  line-height: 48px;
+  text-align: center; }
+
+.price__title::before,
+.price__title::after {
+  content: "";
+  width: 50px;
+  height: 2px;
+  background: #000000; }
+
+.price__title::before,
+.price__title::after {
+  content: "";
+  flex-grow: 1;
+  flex-shrink: 0;
+  width: 50px;
+  height: 2px;
+  background: #000000; }
+
+.price__title::before {
+  margin-right: 25px; }
+
+.price__title::after {
+  margin-left: 25px; }
+
+.price__brands {
+  margin: 14px 0;
+  padding: 0;
+  list-style: none; }
+
+.price__brand {
+  position: relative;
+  margin-bottom: 15px;
+  padding-left: 20px; }
+
+.price__brand::before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 0;
+  width: 8px;
+  height: 8px;
+  background-color: #000000;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg); }
+
+.price__list {
+  width: 100%;
+  border-collapse: collapse; }
+
+.price__item,
+.price__cost {
+  width: 50%;
+  padding: 10px 15px;
+  border: 2px solid #000000; }
+
+.price__cost {
+  text-align: center; }
+
+.price__column {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 60px 0; }
+
+.price__column--left,
+.price__column--right {
+  width: 460px; }
+
+.price__column--left *:first-child,
+.price__column--right *:first-child {
+  margin-top: 0; }
+
+.price__column--left *:last-child,
+.price__column--right *:last-child {
+  margin-bottom: 0; }
+
+.price__text {
+  padding-right: 80px; }
