--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -14,6 +14,7 @@
   width: 300px;
   margin-left: -230px;
   padding: 50px 80px;
+  display: none;
 }
 
 .modal__close {
@@ -55,14 +56,13 @@
 }
 
 .modal-login__text {
-    margin: 0;
-    margin-bottom: 10px;
+  margin: 0;
+  margin-bottom: 10px;
 }
 
 .login-form__item {
   margin: 0;
   margin-bottom: 10px;
-
 }
 
 .login-form__item--info {
@@ -92,21 +92,18 @@
   background-image: url("../img/user.svg");
   background-position: 270px center;
   background-repeat: no-repeat;
-
 }
 
 .login-form__input--password {
   background-image: url("../img/lock.svg");
   background-position: 270px center;
   background-repeat: no-repeat;
-
 }
 
 .login-form__checkbox {
   position: relative;
   padding-left: 30px;
   cursor: pointer;
-
 }
 
 .login-form__checkbox:hover,
@@ -114,9 +111,7 @@
   color: #663d15;
 }
 
-
-
-.login-form__input--checkbox+.login-form__indicator {
+.login-form__input--checkbox + .login-form__indicator {
   position: absolute;
   top: 0;
   left: 0;
@@ -125,15 +120,14 @@
   border: 2px solid #000000;
 }
 
-
-.login-form__input--checkbox:focus+.login-form__indicator {
+.login-form__input--checkbox:focus + .login-form__indicator {
   border-color: #663d15;
   outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
 }
 
-.login-form__input--checkbox:checked+.login-form__indicator::before,
-.login-form__input--checkbox:checked+.login-form__indicator::after {
+.login-form__input--checkbox:checked + .login-form__indicator::before,
+.login-form__input--checkbox:checked + .login-form__indicator::after {
   content: "";
   position: absolute;
   top: 8px;
@@ -143,17 +137,13 @@
   background-color: #000000;
 }
 
-.login-form__input--checkbox:checked+.login-form__indicator::before {
+.login-form__input--checkbox:checked + .login-form__indicator::before {
   transform: rotate(45deg);
 }
 
-.login-form__input--checkbox:checked+.login-form__indicator::after {
+.login-form__input--checkbox:checked + .login-form__indicator::after {
   transform: rotate(-45deg);
 }
-
-
-
-
 
 .login-form__restore {
   color: #000000;
