--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,7 @@
 @import "blocks/appointment";
 @import "blocks/footer";
 @import "blocks/modal";
+@import "blocks/modal-map";
 @import "blocks/breadcrumbs";
 @import "blocks/filter";
 @import "blocks/catalog";
