--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -8,6 +8,7 @@
   box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
 }
 
+
 .modal-login {
   top: 120px;
   left: 50%;
@@ -15,6 +16,10 @@
   margin-left: -230px;
   padding: 50px 80px;
   display: none;
+}
+
+.modal-show {
+  display: block;
 }
 
 .modal__close {
