--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -20,6 +20,11 @@
 
 .modal-show {
   display: block;
+  animation: bounce 0.6s;
+}
+
+.modal-error {
+  animation: shake 0.6s;
 }
 
 .modal__close {
